--- a/glm3_6b.yaml
+++ b/glm3_6b.yaml
@@ -1,8 +1,7 @@
 seed: 0
 run_mode: 'train'
-output_dir: './output' # path to save checkpoint/strategy
+output_dir: './output'  # 当前不支持自定义修改，请勿修改该默认值
 load_checkpoint: ''
-src_strategy_path_or_dir: ''
 auto_trans_ckpt: False  # If true, auto transform load_checkpoint to load in distributed model
 only_save_strategy: False
 resume_training: False
@@ -14,7 +13,7 @@ context:
   enable_graph_kernel: False
   graph_kernel_flags: "--disable_expand_ops=Softmax,Dropout --enable_parallel_fusion=true --reduce_fuse_depth=8 --enable_auto_tensor_inplace=true"
   max_call_depth: 10000
-  max_device_memory: "59GB" # 59GB for Atlas 800T A2
+  max_device_memory: "30GB" # 59GB for 910B
   save_graphs: False
   device_id: 0
 
@@ -32,7 +31,7 @@ model:
     ffn_hidden_size: 13696
     kv_channels: 128
     num_attention_heads: 32
-    seq_length: 193
+    seq_length: 256
     hidden_dropout: 0.0
     attention_dropout: 0.0
     layernorm_epsilon: 1e-5
@@ -48,13 +47,12 @@ model:
     attention_softmax_in_fp32: True
     fp32_residual_connection: False
     quantization_bit: 0
-    pre_seq_len: 0
+    pre_seq_len: None
     prefix_projection: False
     param_init_type: "float16"
     compute_dtype: "float16"
     layernorm_compute_type: "float32"
     use_past: False
-    use_flash_attention: False # when use FlashAttention, seq_length should be multiple of 16
     eos_token_id: 2
     pad_token_id: 0
     repetition_penalty: 1.0
@@ -66,22 +64,13 @@ model:
   arch:
     type: ChatGLM2ForConditionalGeneration
 
-trainer:
-  type: CausalLanguageModelingTrainer
-  model_name: 'glm3_6b'
-# if True do, evaluate during the training process. if false, do nothing.
-# note that the task trainer should support _evaluate_in_training function.
-do_eval: False
-eval_step_interval: 500
-eval_epoch_interval: -1
-
 metric:
   type: ADGENMetric
 
 processor:
   return_tensors: ms
   tokenizer:
-    type: ChatGLM3Tokenizer
+    type: ChatGLM2Tokenizer
     bos_token: '<sop>'
     eos_token: '<eop>'
     end_token: '</s>'
@@ -89,65 +78,7 @@ processor:
     gmask_token: '[gMASK]'
     pad_token: '<pad>'
     unk_token: '<unk>'
-    # vocab_file: "/path/to/tokenizer.model"
   type: GLMProcessor
-
-# ==== dataset config ====
-train_dataset: &train_dataset
-  data_loader:
-    type: ADGenDataLoader
-    dataset_dir: "/path/to/AdvertiseGen/train.json"
-    shuffle: True
-    phase: "train"
-    version: 2
-    origin_columns: ["content", "summary"]
-  tokenizer:
-    type: ChatGLM3Tokenizer
-    vocab_file: "/path/to/tokenizer.model"
-  input_columns: ["input_ids", "labels"]
-  max_source_length: 64
-  max_target_length: 128
-  ignore_pad_token_for_loss: True
-  num_parallel_workers: 8
-  python_multiprocessing: False
-  drop_remainder: True
-  batch_size: 1
-  repeat: 1
-  numa_enable: False
-  prefetch_size: 1
-  seed: 0
-
-train_dataset_task:
-  type: KeyWordGenDataset
-  dataset_config: *train_dataset
-
-eval_dataset: &eval_dataset
-  data_loader:
-    type: ADGenDataLoader
-    dataset_dir: "/path/to/AdvertiseGen/dev.json"
-    shuffle: False
-    phase: "eval"
-    version: 2
-    origin_columns: ["content", "summary"]
-  tokenizer:
-    type: ChatGLM3Tokenizer
-    vocab_file: "/path/to/tokenizer.model"
-  max_source_length: 256
-  max_target_length: 256
-  ignore_pad_token_for_loss: True
-  input_columns: ["input_ids", "labels"]
-  num_parallel_workers: 8
-  python_multiprocessing: False
-  drop_remainder: True
-  batch_size: 1
-  repeat: 1
-  numa_enable: False
-  prefetch_size: 1
-  seed: 0
-
-eval_dataset_task:
-  type: KeyWordGenDataset
-  dataset_config: *eval_dataset
 
 # ==== runner config ====
 runner_config:
@@ -195,8 +126,7 @@ parallel:
   full_batch: True
   search_mode: "sharding_propagation"
   enable_parallel_optimizer: True  # optimizer shard
-  strategy_ckpt_config:
-    save_file: "./ckpt_strategy.ckpt"
+  strategy_ckpt_save_file: "./ckpt_strategy.ckpt"
 parallel_config:
   data_parallel: 8
   model_parallel: 1
@@ -238,7 +168,7 @@ profile_memory: True
 callbacks:
   - type: MFLossMonitor
   - type: CheckpointMointor
-    prefix: "glm3-6b"
+    prefix: "glm2-6b"
     save_checkpoint_steps: 1000
     keep_checkpoint_max: 2
     integrated_save: False
